--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ html, body {
     align-items: center;
     justify-content: center;
 }
+
+/* Main container */
+
+
 #main{
     height: 500px;
     width: 800px;
@@ -19,12 +23,18 @@ html, body {
     border: 1px solid black;
     padding: 1vw;
 }
+
 .content-container{
     width: 100%;
     height: 100%;
     display: flex;
     flex-direction: column;
 }
+
+
+/* Upper section */
+
+
 #part1{
     width: 100%;
     height:35%;
@@ -45,6 +55,11 @@ html, body {
     font-size: 1.5vw;
     color: #454545;
 }
+
+
+/* Lower section */
+
+
 #part2{
     width: 100%;
     height: 65%;
@@ -53,6 +68,10 @@ html, body {
     display: flex;
     align-items: center;
 }
+
+/* Lower section left */
+
+
 #part2-section1{
     height: 100%;
     width: 70%;
@@ -70,6 +89,9 @@ html, body {
     width: 100%;
     height: 100%;
 }
+
+/* Lower section right */
+
 #part2-section2{
     height: 100%;
     width: 30%;
